<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MechanicRegistration"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorActionbarColor"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="center"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="center"
            android:text="@string/RegisterHeading"
            android:textColor="#000000"
            android:textSize="16dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectField" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Car"
                android:textSize="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="101dp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Van"
                android:textSize="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="150dp"
                tools:layout_editor_absoluteY="207dp" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bike"
                android:textSize="20dp"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Truck"
                android:textSize="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="150dp"
                tools:layout_editor_absoluteY="175dp" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:text="Industrial Machinery"
                android:textSize="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="249dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Location" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_bg"
                android:entries="@array/Location_arrays"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/AvailableTime" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_bg"
                android:entries="@array/Time_arrays"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Qualifications" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_bg"
                android:lines="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"

            android:weightSum="3">

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Description" />

            <EditText
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_bg"
                android:lines="3" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:text="@string/next"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

</LinearLayout>