<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MechanicProfile">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorActionbarColor"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/ivBack"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:scaleType="center"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_back_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="center"
            android:text="@string/EditProfile"
            android:textColor="#000000"
            android:textSize="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteAccount"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginLeft="150dp"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="73dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="121dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/avatar"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="116dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="#000000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:lines="1"
                android:layout_weight="2"
                android:layout_marginLeft="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profession"
        android:textColor="#000000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="153dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:lines="1"
                    android:layout_weight="2"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Location"
        android:textColor="#000000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="193dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:lines="1"
                    android:layout_weight="2"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PhoneNumber"
        android:textColor="#000000"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="232dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:lines="1"
                    android:layout_weight="2"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fields"
        android:textColor="#000000"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="300dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:lines="1"
            android:layout_weight="2"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AvailableTime"
        android:textColor="#000000"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="362dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:lines="1"
            android:layout_weight="2"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qualifications"
        android:textColor="#000000"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="422dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:lines="2"
            android:layout_weight="2"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:textColor="#000000"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="483dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:lines="2"
            android:layout_weight="2"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/Update"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="5dp"
        android:background="@color/buttonBackground"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="595dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/CheckAppointment"
        android:textColor="#FFFFFF"
        android:background="@color/buttonBackground"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="662dp" />





</LinearLayout>